<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Платежная система</string>
    <string name="hello_world">Hello world!</string>
    <string name="ok">OK</string>
    <string name="action_settings">Настройки</string>
    <string name="settings">Настройки</string>
    <string name="help">Помощь</string>
    <string name="report">Отчеты</string>
    <string name="payment">Платежи</string>
    <string name="title_activity_main_list">Меню</string>
    <string name="title_balance">Остаток средств</string>
    <string name="back">Назад</string>
    <string name="data_entry_button_check_text">Проверка</string>
    <string name="data_entry_button_start_text">Провести</string>
    <string name="data_entry_button_next_text">Далее</string>
    <string name="data_entry_amount_title">Сумма к зачислению</string>
    <string name="data_entry_full_amount_title">Сумма с клиента</string>
    <string name="data_entry_label">Провести платеж</string>
    <string name="data_entry_provider_label">Оператор</string>
    <string name="data_entry_back_button">Назад</string>
    <string name="title_activity_operators">Выбор оператора</string>
    <string name="title_main_page_activity">Главная страница</string>
    <string name="title_dealer_info_activity">Инофрмация дилера</string>
    <string name="title_activity_activity_balance">Остаток на счете</string>
    <string name="title_activity_paymen_list_screen">Список платежей</string>
    <string name="title_activity_payment_list_impl">Список платежей</string>
    <string name="title_activity_help">Помощь</string>
    <string name="title_access_activity">Авторизация</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>

    <!-- MAIN_MENU -->
    <string name="main_menu_101_label">Моб. связь</string>
    <string name="main_menu_102_label">Телевидение</string>
    <string name="main_menu_103_label">Стационарная связь</string>
    <string name="main_menu_104_label">Интернет</string>
    <string name="main_menu_105_label">Погашение кредитов</string>
    <string name="main_menu_106_label">ЖКХ</string>
    <string name="main_menu_107_label">Игры и развлечения</string>
    <string name="main_menu_108_label">Электронные кошельки</string>
    <string name="main_menu_109_label">Прочее</string>

    <!-- PUSH NOTIFICATIONS -->
    <string name="error_config">Пожалуйста установите %1$s константу и перекомпилируйте приложение.</string>
    <string name="already_registered">Устройство уже зарегистрированно на сервере.</string>
    <string name="gcm_registered">Сообщение GCM: устройство успешно зарегистрированно!</string>
    <string name="gcm_unregistered">Сообщение GCM: успешно выполнена отмена регистрации устройства!</string>
    <string name="gcm_message">Сообщение GCM: вы получили сообщение!</string>
    <string name="gcm_error">Сообщение GCM: ошибка (%1$s).</string>
    <string name="gcm_recoverable_error">Сообщение GCM: устранимая ошибка (%1$s).</string>
    <string name="gcm_deleted">Сообщение GCM: сервер удалил %1$d отложенных сообщений!</string>
    <string name="server_registering">Пытаюсь (попытка %1$d/%2$d) зарегистрировать устройсво на ForwardServer.</string>
    <string name="server_registered">Сообщение ForwardServer: устройство было успешно добавлено!</string>
    <string name="server_unregistered">Сообщение ForwardServer: устройство было успешно удалено!</string>
    <string name="server_register_error">Невозможно зарегистрировать устройство на ForwardServer после %1$d попыток.</string>
    <string name="server_unregister_error">Не могу отменить регистрацию устройства на ForwardServer (%1$s).</string>
    <string name="options_register">Зарегистрировать</string>
    <string name="options_unregister">Отменить регистрацию</string>
    <string name="options_clear">Очистить</string>
    <string name="options_exit">Выход</string>

    <!-- ` GorbovI 2014-08-19 Форма авторизации(activity_main.xml) \  Информация внизу страницы -->
    <string name="info_title">Мобильная система приема платежей</string>
    <string name="version">Версия 1.0</string>

    <!-- ` GorbovI 2014-08-19 Главная странца (activity_main_page.xml) \  Информация о дилере -->
    <string name="dealer_info_name">Дилер:</string>
    <string name="dealer_info_point_num">Номер точки:</string>
    <string name="dealer_info_balance">Баланс:</string>
    <string name="dealer_info_kredit">Кредитный лимит:</string>
    <string name="dealer_info_money_go">Деньги в пути:</string>
    <string name="dealer_info_money_real">Можно израсходовать:</string>
    <string name="dealer_info_fee">Невыплаченное вознаграждение:</string>
    <string name="dealer_info_blocked_money">Удержание (Заблокировано средств):</string>
    <string name="dealer_info_manager">Ваш менеджер:</string>
    <string name="dealer_info_manager_contacts">Контакты:</string>

    <!-- ` GorbovI 2014-08-19 Главная странца (activity_main_page.xml) \  Разделы центрального блока -->
    <string name="payments_systems">Проведение платежей</string>
    <string name="report_payments_system">Отчет по платежам</string>
    <string name="notifications">Уведомления</string>
    <string name="setings">Настройки</string>

    <!-- ` GorbovI 2014-08-20 Главная странца (activity_main_page.xml) \ Описание разделов центрального блока -->
    <string name="ps_description">В данном разделе Вы можете проводить платежи.</string>
    <string name="rps_description">В данном разделе Вы можете проследить состояние платежа за выбраный период.</string>
    <string name="n_description">В данном разделе Вы можете просматривать уведомления.</string>
    <string name="s_description">В данном разделе находятся настройки приложения.</string>

 <string-array name="report_filter_types">
        <item>Период</item>
        <item>Сегодня</item>
        <item>Вчера</item>
        <item>День</item>
        <item>Месяц</item>
        <item>Год</item>
    </string-array>

</resources>
