<?xml version="1.0" ecoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".OperatorsActivity" >

    <item android:id="@+id/operators_action_help"
        android:title="@string/help"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/operators_action_report"
        android:title="@string/report"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/operators_settings"
        android:title="@string/settings"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/operators_payment"
        android:title="@string/payment"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>
