<?xml version="1.0" encoding="UTF-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/data_entry_provider_layout">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/data_entry_provider_label"
            />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/date_entry_provider_select">

            </Spinner>

        </LinearLayout>


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:id="@+id/data_entry_fields_container"
        />


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
    >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/data_entry_amount_title"
        />
        
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/data_entry_value_field"
        />

        <TextView
            android:layout_marginTop="10dp"
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:text="@string/data_entry_full_amount_title"
            />

        <EditText
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/data_entry_full_value_field"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="center|bottom"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
        android:layout_gravity="bottom"
        >

        <Button
            android:text="@string/data_entry_button_start_text"
            android:layout_width="145dp"
            android:layout_height="wrap_content"
            android:id="@+id/data_entry_button_start"/>

        <Button
            android:text="@string/data_entry_button_check_text"
            android:layout_width="145dp"
            android:layout_height="wrap_content"
            android:id="@+id/data_entry_button_check" />

    </LinearLayout>

    </LinearLayout>
</ScrollView>