<?xml version="1.0" encoding="utf-8"?>
<!-- ` Фон приложения -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="#CCC"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="1dp">

    <!-- ` Обертка -->
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:background="@drawable/main_border"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="1pt"
        android:layout_marginRight="1pt"
        android:isScrollContainer="true"
        android:longClickable="false">

        <!-- ` Информация о дилере -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/dealerInfo"
            android:background="#E5E5E5"
            android:clickable="true">

            <!-- ` Данные дилера -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/gradient"
                android:layout_marginLeft="60dip"
                android:orientation="vertical"/>
        </LinearLayout>

        <!-- ` Центральный блок -->
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_vertical">

            <!-- ` Проведение платежей -->
            <LinearLayout android:id="@+id/LinearLayout01"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:padding="3pt"
                android:layout_margin="5dp"
                android:background="@drawable/button_selector">
                <Button android:id="@+id/Button01" android:padding="1dp" android:textSize="14sp" android:text="@string/main_menu_101_label"
                    android:layout_width="match_parent" android:layout_height="40dip" android:background="@color/white"
                    android:drawableLeft="@drawable/mobile_network"
                    android:focusable="false"/></LinearLayout>

            <!-- ` Мониторинг -->
            <LinearLayout android:id="@+id/LinearLayout02"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:padding="3pt"
                android:layout_margin="5dp"
                android:background="@drawable/button_selector">
                <Button android:id="@+id/Button02" android:padding="1dp" android:textSize="13sp" android:text="@string/main_menu_102_label"
                    android:layout_width="match_parent" android:layout_height="40dp" android:background="@color/white"
                    android:drawableLeft="@drawable/television"/></LinearLayout>

            <!-- ` Уведомления системы -->
            <LinearLayout android:id="@+id/LinearLayout03"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:padding="3pt"
                android:layout_margin="5dp"
                android:background="@drawable/button_selector">
                <Button android:id="@+id/Button03" android:padding="1dp" android:textSize="13sp" android:text="@string/main_menu_103_label"
                    android:layout_width="match_parent" android:layout_height="40dp" android:background="@color/white"
                    android:drawableLeft="@drawable/landline"/></LinearLayout>

            <!-- ` Настройки7 -->
            <LinearLayout android:id="@+id/LinearLayout04"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:padding="3pt"
                android:layout_margin="5dp"
                android:background="@drawable/button_selector">
                <Button android:id="@+id/Button04" android:padding="1dp" android:textSize="13sp" android:text="@string/main_menu_104_label"
                    android:layout_width="match_parent" android:layout_height="40dp" android:background="@color/white"
                    android:drawableLeft="@drawable/internet_n_ip" android:clickable="true"/></LinearLayout>


        </LinearLayout>
    </LinearLayout>

    <!-- Слайдер -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/gradient"/>
</LinearLayout>